# ryan

./: .gitignore  Cargo.toml  aposteriori-acronyms.md  changelog.md  getting-ryan.html  print.html  readme.md  todo
.github/workflows/: publish_book.yaml  release.yaml  release_bindings.yaml  release_python.yaml
art-of-ryan/: hello-json.html  simple-types.html  variables-and-patterns.html
book/: 404.html  introduction.html  searchindex.js  searchindex.json
book-of-ryan/: book.toml
book-of-ryan/src/: SUMMARY.md  getting-ryan.md  introduction.md
book-of-ryan/src/art-of-ryan/: comprehensions.md  hello-json.md  importing.md  not-so-simple-types.md  pattern-matching.md  simple-types.md  types.md  variables.md
book-of-ryan/src/integrating/: javascript.md  python.md  rust.md  the-ryan-cli.md
book-of-ryan/src/reference/: built-ins.md
book/art-of-ryan/: comprehensions.html  importing.html  pattern-matching.html
book/integrating/: python.html
examples/: builtins.ryans  comprehensions.ryans  expressions.ryans  importee.ryan  importer.ryans  literals.ryans  operations.ryans  patterns.ryans  templates.ryans  tweedledee.ryan  tweedledum.ryan  types.ryans
install/: Darwin.sh  Linux.sh
integrating/: rust.html  the-ryan-cli.html
ryan/: Cargo.toml
ryan-cli/: Cargo.toml  server.json
ryan-cli/src/: main.rs
ryan-js/: .gitignore  Cargo.toml  LICENSE_MIT  Makefile  README.md
ryan-js/ryan-online/: Makefile  package.json
ryan-js/ryan-online/src/: index.js
ryan-js/src/: lib.rs
ryan-python/: Cargo.toml  Makefile  Pipfile  license  pyproject.toml  readme.md
ryan-python/src/: lib.rs
ryan-web/: Cargo.toml  Makefile  package-lock.json  readme.md
ryan-web/ryan-online/: .gitignore  Makefile  package-lock.json  package.json  webpack.config.js
ryan-web/ryan-online/src/: index.js
ryan/src/: de.rs  lib.rs  rc_world.rs  ryan.pest  utils.rs
ryan/src/environment/: loader.rs  mod.rs  native.rs
ryan/src/parser/: binding.rs  block.rs  comprehension.rs  error.rs  expression.rs  import.rs  literal.rs  mod.rs  operation.rs  pattern.rs  template_string.rs  types.rs  value.rs
static/book-of-ryan/: 404.html  getting-ryan.html  index.html  print.html  searchindex.js  searchindex.json  types.html
static/book-of-ryan/art-of-ryan/: comprehensions.html  hello-json.html  importing.html  not-so-simple-types.html  pattern-matching.html  simple-types.html  variables.html
static/book-of-ryan/integrating/: javascript.html  python.html  rust.html  the-ryan-cli.html
static/book-of-ryan/reference/: built-ins.html
static/ryan-online/: index.html  main.js
vscode/: Makefile
vscode/ryan-syntax-highlighting/: CHANGELOG.md  README.md  language-configuration.json  license.md  package.json  ryan-syntax-highlighting-0.0.1.vsix  vsc-extension-quickstart.md
vscode/ryan-syntax-highlighting/syntaxes/: ryan.tmLanguage.json
