[package]
name = "ryan-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ryan"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0.68"
atty = "0.2.14"
clap = { version = "4.1.4", features = ["derive"] }
ryan = { path = "../ryan" }
serde_json = "1.0.91"
termcolor = "1.2.0"
termcolor-json = "1.0.0"
