[package]
name = "ryan-cli"
version = "0.2.0"
edition = "2021"
authors = ["Pedro Bittencorut Arruda <pedrobittencourt3@gmail.com>"]
description = "Ryan: a configuration language for the practical programmer"
readme = "../readme.md"
repository = "https://github.com/tokahuke/ryan"
license = "MIT"
keywords = ["cli", "parser", "json", "serde", "serialization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ryan"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0.69"
atty = "0.2.14"
clap = { version = "4.1.6", features = ["derive"] }
# ryan = "0.2.0"
ryan = { path = "../ryan" }
serde_json = "1.0.93"
termcolor = "1.2.0"
termcolor-json = "1.0.0"
