[package]
name = "ryan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
pest = "2.5.4"
pest_derive = "2.5.4"
serde = "1.0.152"
serde_json = "1.0.91"
snailquote = "0.3.1"
thiserror = "1.0.38"
