[package]
name = "ryan"
version = "0.2.2"
edition = "2021"
authors = ["Pedro Bittencorut Arruda <pedrobittencourt3@gmail.com>"]
description = "Ryan: a configuration language for the practical programmer"
readme = "../readme.md"
repository = "https://github.com/tokahuke/ryan"
license = "MIT"
keywords = ["cli", "parser", "json", "serde", "serialization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1"
lazy_static = "1"
pest = "2.5.5"
pest_derive = "2.5.5"
serde = "1"
thiserror = "1"
